# MiniSGBDR

./: .gitignore  Cargo.toml  README.md  S.csv  config.json
PROJET_BDDA/: Cargo.toml
PROJET_BDDA/res/: fichier.json
PROJET_BDDA/src/: DiskManager.rs  buffer_manager.rs  config.rs  disk_manager.rs  fichier.json  main.rs  page.rs  page_info.rs
PROJET_BDDA/src/dbpath/: dm.save
res/: fichier.json  fichier_test_buffermanager  fichier_test_write_relation
res/dbpath/: databases.json
res/dbpath/BinData/: F0.rsdb  F1.rsdb
src/: buffer.rs  buffer_manager.rs  col_info.rs  condition.rs  config.rs  data_base.rs  db_manager.rs  disk_manager.rs  main.rs  operator.rs  page.rs  page_info.rs  record.rs  recordId.rs  record_id.rs  relation.rs  select.rs  sgbd.rs  tempCodeRunnerFile.rs  types.rs
