[package]
name = "PROJET_BDDA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file = "1.1.2"
serde_json = "1.0.128"
bytebuffer = "2.3.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] } 
byteorder = "1.4"
string-builder = "0.2.0"

